--- a/Changelog
+++ b/Changelog
@@ -35,7 +35,7 @@ FIXES
 * classic ui: fix vulnerability against CSRF attacks CVE-2013-7107 #5346 - RB
 * classic ui: fix timepicker is resetting time in input field #5239 - RB
 
-* idoutils: wait for child processes on exit preventing zombies #4427 - MF
+* idoutils: wait for child processes on exit preventing zombies (Laurent Bigonville) #4427 - MF
 
 * initscript: handle binary return codes gracefully #5412 - MF
 
