--- a/THANKS
+++ b/THANKS
@@ -42,6 +42,7 @@ in various ways.  If we missed your name, let us know.
 * Lennart Betz
 * Olivier Beytrison
 * Christoph Biedl
+* Laurent Bigonville
 * Dennis Biringer
 * Mike Bird
 * Jason Blakey
