--- a/Changelog
+++ b/Changelog
@@ -36,6 +36,7 @@ FIXES
 * classic ui: fix timepicker is resetting time in input field #5239 - RB
 
 * idoutils: wait for child processes on exit preventing zombies (Laurent Bigonville) #4427 - MF
+* idoutils: fix bad update performance with large commenthistory table (thx tgelf) #4985 - MF
 
 * initscript: handle binary return codes gracefully #5412 - MF
 
