--- a/THANKS
+++ b/THANKS
@@ -209,6 +209,7 @@ in various ways.  If we missed your name, let us know.
 * Christoph Maser
 * Christian Masopust
 * Emanuel Massano
+* Philip Matuskiewicz
 * Richard Mayhew
 * Mike McHenry
 * Gordon Messmer
