--- a/THANKS
+++ b/THANKS
@@ -87,6 +87,7 @@ in various ways.  If we missed your name, let us know.
 * Thomas Dohl
 * Mike Dorman
 * Albrecht Dress
+* Tomas Dubec
 * Alok Dubey
 * Jim Dumser
 * Thomas Dunkel
