Fix "SEGV in idomod syslog call on Solaris".
This patch adds a check for a null-pointer to the filename
string to circumvent segfaults for Solaris.  Since the call can
never complete normally as invoked, return ERROR status and bail.

Fixes #5686

--- a/Changelog
+++ b/Changelog
@@ -48,6 +48,7 @@ FIXES
 * idoutils: fix SEGV in ido2db in solaris #5687 - TD
 * idoutils: allow agent_version to store more than 16 chars #5731 - MF
 * idoutils: dump customvariable status by default (restore feature for icinga web (2)) #5732 - MF
+* idoutils: fix SEGV in idomod syslog call on Solaris #5686 - CF
 
 * initscript: handle binary return codes gracefully #5412 - MF
 
