--- a/Changelog
+++ b/Changelog
@@ -23,6 +23,11 @@ NEWS
 
 1.11.1 - XX/YY/2014
 
+ENHANCEMENTS
+
+* classic ui: add 'check_service' attribute to extinfo details (Icinga 2 only) #5841 - MF
+
+
 FIXES
 
 * idoutils: oracle: fix missing programstatus config_dump_in_progress #5080 #5776 - TD
