--- a/Changelog
+++ b/Changelog
@@ -30,8 +30,11 @@ ENHANCEMENTS
 
 FIXES
 
+* classic ui: CVE-2014-2386: fix small buffer overflows when checking strlen against MAX_INPUT_BUFFER (Tim Landscheidt, Wikimedia) #5873 - RB
+
 * idoutils: oracle: fix missing programstatus config_dump_in_progress #5080 #5776 - TD
 * idoutils: oracle: fix missing symbol for startup schema checks #5777 - TD
+* idoutils: pgsql: fix table creates for icinga 2 endpoints #5850 - GB
 
 
 1.11.0 - 13/03/2014
