--- a/Changelog
+++ b/Changelog
@@ -13,8 +13,15 @@ UPGRADE NOTES
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
 
+1.9.6 - 28/03/2014
+
+FIXES
+* classic ui: CVE-2014-2386: fix small buffer overflows when checking strlen against MAX_INPUT_BUFFER #5873 - RB
+
+
 1.9.5 - 11/02/2014
 
+FIXES
 * core: fix host state translation for passive host check results #5575 - MF
 
 * classic ui: aggressively check for possible buffer overflows in cmd.cgi (thx GitHub) #5434 - MF
