--- a/Changelog
+++ b/Changelog
@@ -13,6 +13,19 @@ UPGRADE NOTES
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
 
+1.10.4 - 28/03/2014
+
+FIXES
+
+* core: fix passive check result processing for host checks is not working (Marco Hoyer) #5671 - MF
+
+* classic ui: CVE-2014-2386: fix small buffer overflows when checking strlen against MAX_INPUT_BUFFER #5873 - RB
+
+* idoutils: oracle: fix missing programstatus config_dump_in_progress #5080 #5776 - TD
+* idoutils: oracle: fix missing symbol for startup schema checks #5777 - TD
+
+* packages: fix gpl license text, wrong file encoding (Tim Hardeck) #5698 - MF
+
 1.10.3 - 11/02/2014
 
 ENHANCEMENTS
