--- a/Changelog
+++ b/Changelog
@@ -27,6 +27,7 @@ FIXES
 
 * core: fix regex using servicegroup members *,service fails to expand after lookup (Ricardo Melo) #3881 - MF
 * classic ui: fix parser bailing on command object custom variables (Icinga 2 only) #5940 - MF
+* classic ui: drop experimental 'check_service' attribute (Icinga 2 only) #5841 - MF
 
 
 1.11.1 - 28/03/2014
