--- a/Changelog
+++ b/Changelog
@@ -29,13 +29,16 @@ ENHANCEMENTS
 FIXES
 
 * core: Revert "add colon to illegal_object_name_chars" (#4227) #5931 - MF
-
+* core: Remove t-tap/ #6022 - MF
+* core: Remove json checker #6023 - MF
 
 CHANGES
 
-* core: Revert "add colon to illegal_object_name_chars" (#4227) 
+* core: Revert "add colon to illegal_object_name_chars" (#4227) #5931
 * idoutils: Add {host,service}{groups,status] columns: notes, notes_url, action_url, is_reachable. (Icinga 2) #6060
 	** bump schema version to 1.11.3
+* core: Remove t-tap/ #6022
+* core: Remove json checker
 
 
 1.11.2 - 24/04/2014
