--- a/Changelog
+++ b/Changelog
@@ -24,7 +24,15 @@ NEWS
 
 FIXES
 
-* classic ui: Fix CSRF protection in cmd.cgi matches only complied in URL #6459 - MF
+* classic-ui: fix status.cgi gets stuck in loop when sorting on "All Unhandled Problems" #5886 - RB
+* classic ui: Only show command expander if backend is Icinga 1.x (incompatible with Icinga 2) #6408 - MF
+* classic ui: Fix CSRF protection in cmd.cgi matches only compiled in URL #6459 - MF
+
+* initscript: Fixed Typo in ido2db and icinga init scripts preventing them to kill -9 their processes #6410 - MaH
+
+CHANGES
+
+* cgi.cfg: Add url_cgi_path allowing to override the default '$htmurl/cgi-bin' required for CSRF checks #6459
 
 
 1.11.4 - 28/05/2014
