--- a/Changelog
+++ b/Changelog
@@ -1,6 +1,6 @@
-#####################################################
-Icinga Core / Classic UI / IDOUtils / Docs Change Log
-#####################################################
+#########################################################
+Icinga 1.x Core / Classic UI / IDOUtils / Docs Change Log
+#########################################################
 
 Thanks to all contributers, testers and developers. Please read AUTHORS and THANKS for a detailed list :-)
 
@@ -12,13 +12,17 @@ UPGRADE NOTES
 	- core, classic ui: ${source}/sample-config/updates/
 	- idoutils: ${source}/module/idoutils/config/updates
 * package locations may differ!
-
+	https://wiki.icinga.org/display/howtos/Package+Specific+Locations
 
 NEWS
+
+* This is the Icinga 1.x development branch. If you are looking for Icinga 2.x
+  please check https://www.icinga.org/icinga2
 
 * Releases are now hosted at GitHub. Please check https://www.icinga.org/download for details!
 
 * Mailinglists have been migrated to icinga.org. Please check https://www.icinga.org/support for details!
+
 
 1.11.5 - 20/06/2014
 
@@ -34,6 +38,7 @@ FIXES
 CHANGES
 
 * cgi.cfg: Add url_cgi_path allowing to override the default '$htmurl/cgi-bin' required for CSRF checks #6459
+	** Required for icinga2-classicui Debian package
 
 
 1.11.4 - 28/05/2014
