--- a/Changelog
+++ b/Changelog
@@ -24,6 +24,18 @@ NEWS
 * Mailinglists have been migrated to icinga.org. Please check https://www.icinga.org/support for details!
 
 
+1.11.7 - 03/09/2014
+
+FIXES
+
+* Use versioned dependencies in the RPM spec file #7071 - GB
+* Import 1.11.7 schema changes from Icinga 2 #6939 - MF
+
+CHANGES
+
+* New programstatus column 'endpoint_name' requires schema update to 1.11.7! #6939
+
+
 1.11.6 - 06/08/2014
 
 FIXES
