--- a/Changelog
+++ b/Changelog
@@ -34,6 +34,7 @@ ENHANCEMENTS
 * classic ui: Add display of extra icons in status overview of hosts and services #6829 - RD/RB
 
 * idoutils: Add program_version column to programstatus table #7390 - MF
+* idoutils: Extend size of column 'alias' for MySQL tables hosts & contacts #6382 - MF
 
 FIXES
 
@@ -50,6 +51,7 @@ CHANGES
 * core/idoutils: Populate long_output column on notification history neb events #7362
 * idoutils: Add program_version column to programstatus table #7390
 	** required for Icinga Web 2 and Icinga 2
+* idoutils: 'alias' column is now TEXT in MySQL #6382
 
 
 1.11.7 - 03/09/2014
