--- a/AUTHORS
+++ b/AUTHORS
@@ -20,6 +20,7 @@ Gunnar Beutner <gunnar.beutner@netways.de>
 Hendrik Baecker <andurin@process-zero.de>
 hiren patel <hir3npatel@gmail.com>
 hirenp <hir3npatel@gmail.com>
+James Hunt <james@niftylogic.com>
 Joerg Linge <pitchfork@pnp4nagios.org>
 Karl DeBisschop <kdebisschop@users.sourceforge.net>
 Kepi <kepi@igloonet.cz>
