--- a/Changelog
+++ b/Changelog
@@ -23,6 +23,10 @@ NEWS
 
 * Mailinglists have been migrated to icinga.org. Please check https://www.icinga.org/support for details!
 
+1.13.0 - XX/03/2015
+
+TODO
+
 1.12.1 - 24/01/2015
 
 FIXES
