--- a/Changelog
+++ b/Changelog
@@ -37,6 +37,13 @@ FEATURES
 
 FIXES
 
+1.12.2 - 14/02/2015
+
+FIXES
+
+* Bug #3305: Duplicate service definitions are not generating a config validation error
+
+
 1.12.1 - 24/01/2015
 
 FIXES
