--- a/Changelog
+++ b/Changelog
@@ -32,6 +32,7 @@ CHANGES
 * Remove deprecated event_profiling_enabled from icinga.cfg
 * Remove deprecated broker_module from icinga.cfg (use module object configuration instead)
 * Add module config examples in modules/ directory (livestatus, mod_gearman, pnp4nagios, flapjack)
+* Move contrib/downtimes to tools/downtimes and add 'make install-downtimes'
 
 FEATURES
 
