Fix C99 compilation error with loop variable declaration
refs #8986

Signed-off-by: Michael Friedrich <michael.friedrich@netways.de>

--- a/AUTHORS
+++ b/AUTHORS
@@ -39,6 +39,7 @@ Michael Luebben <michael_luebben@web.de>
 Mike Becker <mike.becker@redpeppersworld.de>
 Patricia Jung <pju@censhare.de>
 Philip Matuskiewicz <philip.matuskiewicz@nyct.com>
+Ralf Kruedewagen <ralf@kruedewagen.de>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Ricardo Melo <ricardo.melo@gameloft.com>
 Rune Darrud <theflyingcorpse@gmail.com>
