--- a/Changelog
+++ b/Changelog
@@ -19,6 +19,19 @@ NEWS
 * This is the Icinga 1.x development branch. If you are looking for Icinga 2.x
   please check https://www.icinga.org/icinga2
 
+1.13.1 - 05/04/2015
+
+NOTES
+
+You may still use 'broker_module' configuration inside icinga.cfg. It just
+has been removed from the sample configuration and will log a deprecation
+warning on startup.
+
+FIXES
+
+* Bug #8986: wrong fd initilization preventing checks using file descriptors
+
+
 1.13.0 - 30/03/2015
 
 CHANGES
