Fix broken Icinga RPM package
Was not properly tested due to a broken Jenkins box.

fixes #9010

--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ Mike Becker <mike.becker@redpeppersworld.de>
 Patricia Jung <pju@censhare.de>
 Philip Matuskiewicz <philip.matuskiewicz@nyct.com>
 Ralf Kruedewagen <ralf@kruedewagen.de>
+René Koch <rkoch@rk-it.at>
 Ricardo Bartels <ricardo@bitchbrothers.com>
 Ricardo Melo <ricardo.melo@gameloft.com>
 Rune Darrud <theflyingcorpse@gmail.com>
