--- a/AUTHORS
+++ b/AUTHORS
@@ -3,7 +3,6 @@ Alexander Wirt <formorer@debian.org>
 Andreas Ericsson <ae@op5.se>
 Andrew Hoag <andrew.hoag@gmail.com>
 Assaf Flatto <icinga@flatto.net>
-assaf <icinga@flatto.net>
 Bernd Arnold <bernd_a@gmx.de>
 Carl Friend <crfriend@rcn.com>
 Carl R. Friend <crfriend@rcn.com>
@@ -11,26 +10,23 @@ Chris Moates <six@mox.net>
 Christian Doebler <christian.doebler@netways.de>
 Christian Ruppert <idl0r@gentoo.org>
 Christoph Maser <cmr@financial.com>
-cmr <cmr@financial.com>
 David Ressman <davidr@ressman.org>
 Dirk Goetz <dirk.goetz@netways.de>
 Ethan Galstad <egalstad@nagios.org>
 Franz Holzer <office@frankstar.at>
 Gunnar Beutner <gunnar.beutner@netways.de>
 Hendrik Baecker <andurin@process-zero.de>
-hiren patel <hir3npatel@gmail.com>
-hirenp <hir3npatel@gmail.com>
 James Hunt <james@niftylogic.com>
 Joerg Linge <pitchfork@pnp4nagios.org>
 Karl DeBisschop <kdebisschop@users.sourceforge.net>
 Kepi <kepi@igloonet.cz>
 Lara Berdelsmann <berdelsmann@arcor.de>
 Lars Engels <lars.engels@0x20.net>
-marco-hoyer <marco.hoyer@immobilienscout24.de>
 Mario Rimann <typo3-coding@rimann.org>
 Marius Hein <marius.hein@netways.de>
-Markus Frosch <markus@lazyfrosch.de>
 Mark Young <myoung@nagios.org>
+Markus Frosch <markus@lazyfrosch.de>
+Martin Skuta <mskuta@posteo.net>
 Massimo Forni <forni.massimo@gmail.com>
 Matt Bostock <matt@mattbostock.com>
 Matthew J. Brooks <matthew@sonomatechpartners.com>
@@ -51,9 +47,15 @@ Thomas Dressler <tdressler@tdressler.net>
 Thomas Dreßler <tdressler@tdressler.net>
 Tim Hardeck <thardeck@suse.de>
 Tim Schumacher <tschumacher@tourevo-software.com>
+Tobias Redel <tobias.redel@netways.de>
 Tobias Scherbaum <tobias@scherbaum.info>
 Tomas Dubec <tomas.dubec@gmail.com>
 Ton Voon <ton.voon@opsera.com>
 Torsten Rehn <trehn@nagify.com>
-uid21444 <uid21444>
 Wolfgang <wnd@gmx.net>
+assaf <icinga@flatto.net>
+cmr <cmr@financial.com>
+hiren patel <hir3npatel@gmail.com>
+hirenp <hir3npatel@gmail.com>
+marco-hoyer <marco.hoyer@immobilienscout24.de>
+uid21444 <uid21444>
