--- a/Changelog
+++ b/Changelog
@@ -23,6 +23,15 @@ NEWS
 
 * Mailinglists have been migrated to icinga.org. Please check https://www.icinga.org/support for details!
 
+1.11.8 - 22/12/2016
+
+SECURITY FIXES
+
+* Fix possible root privilege escalation during opening logs (CVE-2016-9566) #13709
+
+Icinga is **not** vulnerable to CVE-2016-9565 since we do not provide any PHP
+files nor external advertising RSS feeds inside the Classic UI.
+
 
 1.11.7 - 03/09/2014
 
